Add patch to fix kernel 4.3 build failure due to internal api changes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5605 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,7 @@ nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
      ships vendor-neutral GL libraries
    * Updated libegl1-nvidia, upstream now ships libEGL.so.1
    * Updated libgl1-nvidia-glx and libnvidia-eglcore symbols
+   * Add patch to fix kernel module build failure on 4.3
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
