Add patch to fix kernel 4.3 build failure due to internal api changes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5607 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
 
+  [ Andreas Beckmann ]
   * Update lintian overrides.
   * bug-script: Report device node permissions.
+
+  [ Luca Boccassi ]
+  * Add patch to fix kernel module build failure on 4.3
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Oct 2015 10:18:28 +0200
 
