collect information about CUDA libraries
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5608 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
   [ Andreas Beckmann ]
   * Update lintian overrides.
   * bug-script: Report device node permissions.
+  * bug-control, bug-script: Report information about CUDA libraries.
+  * libcuda1: Provides: libcuda1-any.
 
   [ Luca Boccassi ]
   * Add patch to fix kernel module build failure on 4.3
