--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
   * bug-script: Report device node permissions.
   * bug-control, bug-script: Report information about CUDA libraries.
   * libcuda1: Provides: libcuda1-any.
+  * xserver-xorg-video-nvidia: Ship nvidia-drm-outputclass.conf, managed via
+    nvidia-alternative.
 
   [ Luca Boccassi ]
   * Add patch to fix kernel module build failure on 4.3
