--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,7 @@ nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
    * Updated libegl1-nvidia, upstream now ships libEGL.so.1
    * Updated libgl1-nvidia-glx and libnvidia-eglcore symbols
    * Add patch to fix kernel module build failure on 4.3
+   * Add patch to fix armhf kernel module build failure on 4.3  
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
