add nvidia-kernel-support package
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5612 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
   * libcuda1: Provides: libcuda1-any.
   * xserver-xorg-video-nvidia: Ship nvidia-drm-outputclass.conf, managed via
     nvidia-alternative.
+  * Add nvidia-kernel-support package.
 
   [ Luca Boccassi ]
   * Add patch to fix kernel module build failure on 4.3
