--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.93-4) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * Update lintian overrides.
@@ -12,7 +12,7 @@ nvidia-graphics-drivers (340.93-4) UNRELEASED; urgency=medium
   [ Luca Boccassi ]
   * Add patch to fix kernel module build failure on 4.3
 
- -- Andreas Beckmann <anbe@debian.org>  Tue, 06 Oct 2015 10:18:28 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 09 Oct 2015 01:52:51 +0200
 
 nvidia-graphics-drivers (340.93-3) unstable; urgency=medium
 
