Add patch to fix kernel 4.3 armhf build failure
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5615 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (352.41-2) UNRELEASED; urgency=medium
 
   * Add patch to fix kernel module build failure on 4.3
+  * Add patch to fix armhf kernel module build failure on 4.3
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 07 Oct 2015 20:25:41 +0100
 
