--- a/debian/changelog
+++ b/debian/changelog
@@ -99,7 +99,7 @@ nvidia-graphics-drivers (358.09-1) UNRELEASED; urgency=medium
     - Updated kernel module patches to accomodate for new build path
     - Added patches to stop upstream Kbuild from using conftest.sh
     - Updated paths in debian/nvidia-kernel-dkms.dkms.in debian/rules.in,
-      debian/rules for new build system
+      debian/rules for new build system and new nvidia-modesetting module
     - Removed debian/module/Makefile, debian/module/conftest.sh
     - Modules build on 4.2, update rules.def
     - debian/module/conftest/patches.h is no longer a symlink
