move nvidia-modprobe.conf to nvidia-kernel-support
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5635 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nvidia-graphics-drivers (340.93-5) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
+  * nvidia-kernel-support: Ship nvidia-modprobe.conf (previously in
+    nvidia-alternative), managed via nvidia-alternative.
   * Reroute all kernel module dependencies through nvidia-kernel-support.
 
   [ Luca Boccassi ]
