New upstream changelog shows new devices names, GeForce 805A and GeForce GTX 960A
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/358@5641 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nvidia-graphics-drivers (358.09-1) UNRELEASED; urgency=medium
 
   * New upstream beta 358.09 (2015-10-12).
+    - Added support for the following GPUs:
+      GeForce 805A
+      GeForce GTX 960A
     - Fixed a regression that reduced OpenGL performance on headless X server
       configurations.
     - Fixed a memory leak that occurred after destroying a GLXWindow which
