--- a/debian/changelog
+++ b/debian/changelog
@@ -111,6 +111,9 @@ nvidia-graphics-drivers (358.09-1) UNRELEASED; urgency=medium
   * Updated libegl1-nvidia, upstream now ships libEGL.so.1
   * Updated libgl1-nvidia-glx and libnvidia-eglcore symbols
   * Add patch to fix armhf kernel module build failure on 4.3  
+  * conftest.h:
+    - Implement new conftest.sh functions hlist_for_each_entry, of_parse_phandle,
+      for_each_online_node, node_end_pfn (358.09)
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
