Sync conftest.h from branches/358
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5643 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,6 +65,9 @@ nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
   * Updated libgl1-nvidia-glx and libnvidia-eglcore symbols
   * Add patch to fix kernel module build failure on 4.3
   * Add patch to fix armhf kernel module build failure on 4.3  
+  * conftest.h:
+    - Implement new conftest.sh functions hlist_for_each_entry, of_parse_phandle,
+      for_each_online_node, node_end_pfn (358.09)
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Sun, 04 Oct 2015 22:07:14 +0100
 
