--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-nvidia-graphics-drivers (352.41-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.55-1) UNRELEASED; urgency=medium
 
+  * New upstream long lived branch release 352.55 (2015-10-12).
+    - Added support for the following GPUs: GeForce 805A, GeForce GTX 960A
+    - Fixed a bug that caused applications using OpenCL or CUDA with
+      OpenGL interopability to crash when using GLX indirect rendering.
   * Add patch to fix kernel module build failure on 4.3
   * Add patch to fix armhf kernel module build failure on 4.3
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 07 Oct 2015 20:25:41 +0100
+ -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 14 Oct 2015 22:13:28 +0100
 
 nvidia-graphics-drivers (352.41-1) experimental; urgency=medium
 
