--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ nvidia-graphics-drivers (352.55-1) UNRELEASED; urgency=medium
     - Fixed a bug that caused applications using OpenCL or CUDA with
       OpenGL interopability to crash when using GLX indirect rendering.
   * Add patch to fix armhf kernel module build failure on 4.3
+  * conftest.h:
+    - Implement new conftest.sh functions hlist_for_each_entry, of_parse_phandle,
+      for_each_online_node, node_end_pfn (358.09)
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 14 Oct 2015 22:13:28 +0100
 
