Xorg autoconfig does not cause the permission issues
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5662 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (340.93-5) UNRELEASED; urgency=medium
     nvidia-load.conf, managed via nvidia-alternative.
   * Reroute all kernel module dependencies through nvidia-kernel-support.
   * nvidia-modprobe.conf: Temporarily disable the PCI-ID-match aliases.
+  * Xorg autoconfig does not cause the permission issues.  (See: #801598)
   * Update lintian overrides.
 
   [ Luca Boccassi ]
