--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (340.93-5) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.93-5) unstable; urgency=medium
 
   [ Andreas Beckmann ]
   * Merge changes from 304.128-1 (wheezy) and 340.93-0+deb8u1 (jessie).
@@ -7,17 +7,19 @@ nvidia-graphics-drivers (340.93-5) UNRELEASED; urgency=medium
   * nvidia-kernel-support: Ship nvidia-blacklists-nouveau.conf and
     nvidia-load.conf, managed via nvidia-alternative.
   * Reroute all kernel module dependencies through nvidia-kernel-support.
-  * nvidia-modprobe.conf: Temporarily disable the PCI-ID-match aliases.
+    (Closes: #801298)
+  * nvidia-modprobe.conf: Temporarily disable the PCI-ID-match aliases and go
+    back to insecure default permissions (root:root 0666).  (See: #801869)
   * Xorg autoconfig does not cause the permission issues.  (See: #801598)
   * Update lintian overrides.
 
   [ Luca Boccassi ]
   * Add patch to fix armhf kernel module build failure on 4.3
   * conftest.h:
-    - Implement new conftest.sh functions hlist_for_each_entry, of_parse_phandle,
-      for_each_online_node, node_end_pfn (358.09).
+    - Implement new conftest.sh functions hlist_for_each_entry,
+      of_parse_phandle, for_each_online_node, node_end_pfn (358.09).
 
- -- Luca Boccassi <luca.boccassi@gmail.com>  Sat, 10 Oct 2015 00:19:20 +0100
+ -- Andreas Beckmann <anbe@debian.org>  Thu, 15 Oct 2015 16:00:30 +0200
 
 nvidia-graphics-drivers (340.93-4) unstable; urgency=medium
 
