--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (343.36-3) UNRELEASED; urgency=medium
+
+  * Merge changes from 340.93-5.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 12:56:02 +0200
+
 nvidia-graphics-drivers (343.36-2) experimental; urgency=medium
 
   * Merge changes from 340.76-1.
