--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.93-6) UNRELEASED; urgency=medium
+
+  * nvidia-opencl-icd: Restore the Depends: libcuda1.
+
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 18:35:10 +0200
+
 nvidia-graphics-drivers (340.93-5) unstable; urgency=medium
 
   [ Andreas Beckmann ]
