--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ nvidia-graphics-drivers (346.96-1) UNRELEASED; urgency=medium
       GeForce GTX 980 Ti.
   * Update nv-readme.ids.
   * UVM is no longer available on 32-bit architectures.
+  * Use nvidia-drm-outputclass.conf as shipped by NVIDIA.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 19:26:13 +0200
 
