--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 nvidia-graphics-drivers (352.55-1) UNRELEASED; urgency=medium
 
+  [ Luca Boccassi ]
   * New upstream long lived branch release 352.55 (2015-10-12).
     - Added support for the following GPUs: GeForce 805A, GeForce GTX 960A
     - Fixed a bug that caused applications using OpenCL or CUDA with
@@ -8,6 +9,9 @@ nvidia-graphics-drivers (352.55-1) UNRELEASED; urgency=medium
   * conftest.h:
     - Implement new conftest.sh functions hlist_for_each_entry, of_parse_phandle,
       for_each_online_node, node_end_pfn (358.09)
+
+  [ Andreas Beckmann ]
+  * libcuda1: Add Provides: libcuda-7.5-1{,-i386}.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 14 Oct 2015 22:13:28 +0100
 
