--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,9 @@ nvidia-graphics-drivers (352.55-1) UNRELEASED; urgency=medium
     - Added support for the following GPUs: GeForce 805A, GeForce GTX 960A.
     - Fixed a bug that caused applications using OpenCL or CUDA with OpenGL
       interopability to crash when using GLX indirect rendering.
+    * Improved compatibility with recent Linux kernels.
   * Merge changes from 340.93-5.
+  * seq-printf.patch: Remove, fixed upstream.
   * libcuda1: Add Provides: libcuda-7.5-1{,-i386}.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 14 Oct 2015 22:13:28 +0100
