--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ nvidia-graphics-drivers (352.55-1) UNRELEASED; urgency=medium
   * Merge changes from 340.93-5.
   * seq-printf.patch: Remove, fixed upstream.
   * libcuda1: Add Provides: libcuda-7.5-1{,-i386}.
+  * Update lintian overrides.
 
  -- Luca Boccassi <luca.boccassi@gmail.com>  Wed, 14 Oct 2015 22:13:28 +0100
 
