--- a/debian/changelog
+++ b/debian/changelog
@@ -20,7 +20,8 @@ nvidia-graphics-drivers (340.93-5) unstable; urgency=medium
   * Update lintian overrides.
 
   [ Luca Boccassi ]
-  * Add patch to fix armhf kernel module build failure on 4.3
+  * arm-outer-sync.patch: New patch to fix armhf kernel module build for
+    Linux 4.3.
   * conftest.h:
     - Implement new conftest.sh functions hlist_for_each_entry,
       of_parse_phandle, for_each_online_node, node_end_pfn (358.09).
@@ -39,7 +40,7 @@ nvidia-graphics-drivers (340.93-4) unstable; urgency=medium
   * Add nvidia-kernel-support package.
 
   [ Luca Boccassi ]
-  * Add patch to fix kernel module build failure on 4.3
+  * seq-printf.patch: New patch to fix kernel module build for Linux 4.3.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 09 Oct 2015 01:52:51 +0200
 
