move tar option --no-recursion before the list of files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5734 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (340.93-6) UNRELEASED; urgency=medium
 
   * nvidia-opencl-icd: Restore the Depends: libcuda1.
+  * r/rules: Move tar option --no-recursion before the list of files.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 18:35:10 +0200
 
