--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.93-0+deb8u2) UNRELEASED; urgency=medium
+
+  * d/rules: Move tar option --no-recursion before the list of files.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 17 Oct 2015 18:38:13 +0200
+
 nvidia-graphics-drivers (340.93-0+deb8u1) jessie; urgency=medium
 
   * New upstream legacy 340xx branch release 340.93 (2015-09-02).
