--- a/debian/changelog
+++ b/debian/changelog
@@ -93,6 +93,8 @@ nvidia-graphics-drivers (358.09-1) UNRELEASED; urgency=medium
     - Updated kernel module patches to accommodate for new build path
     - Added patches to stop upstream Kbuild from using conftest.sh:
       disable_nvidia_conftest.patch, disable_uvm_conftest.patch
+    - Add patch to build with Kbuild's version of the compiler instead of
+      system default: use-kbuild-compiler.patch
     - Updated paths in debian/nvidia-kernel-dkms.dkms.in debian/rules.in,
       debian/rules for new build system and new nvidia-modesetting module
     - Removed debian/module/Makefile, debian/module/conftest.sh
