--- a/debian/changelog
+++ b/debian/changelog
@@ -92,7 +92,8 @@ nvidia-graphics-drivers (358.09-1) UNRELEASED; urgency=medium
     - Make build verbose by using new env var NV_VERBOSE=1
     - Updated kernel module patches to accommodate for new build path
     - Added patches to stop upstream Kbuild from using conftest.sh:
-      disable_nvidia_conftest.patch, disable_uvm_conftest.patch
+      disable_nvidia_conftest.patch, disable_uvm_conftest.patch,
+      disable_modeset_conftest.patch
     - Add patch to build with Kbuild's version of the compiler instead of
       system default: use-kbuild-compiler.patch
     - Updated paths in debian/nvidia-kernel-dkms.dkms.in debian/rules.in,
