--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
 nvidia-graphics-drivers (340.93-6) UNRELEASED; urgency=medium
 
   * nvidia-opencl-icd: Restore the Depends: libcuda1.
-  * r/rules: Move tar option --no-recursion before the list of files.
+  * d/rules: Move tar option --no-recursion before the list of files.
+  * Bump dependency to nvidia-kernel-common (>= 20151021) which no longer
+    applies non-default permissions on the /dev/nvidia* device nodes.
+    (See: #801598, #801869)
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 18:35:10 +0200
 
