re-enable the PCI ID matching aliases
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5749 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (340.93-6) UNRELEASED; urgency=medium
   * Bump dependency to nvidia-kernel-common (>= 20151021) which no longer
     applies non-default permissions on the /dev/nvidia* device nodes.
     (See: #801598, #801869)
+  * nvidia-modprobe.conf: Re-enable the PCI ID matching aliases.
 
  -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 18:35:10 +0200
 
