--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-nvidia-graphics-drivers (340.93-6) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.93-6) unstable; urgency=medium
 
   * nvidia-opencl-icd: Restore the Depends: libcuda1.
   * d/rules: Move tar option --no-recursion before the list of files.
   * Bump dependency to nvidia-kernel-common (>= 20151021) which no longer
     applies non-default permissions on the /dev/nvidia* device nodes.
-    (See: #801598, #801869)
+    (See: #801598, #801869) (Closes: #801191, #801097)
   * nvidia-modprobe.conf: Re-enable the PCI ID matching aliases.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 16 Oct 2015 18:35:10 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 21 Oct 2015 16:22:33 +0200
 
 nvidia-graphics-drivers (340.93-5) unstable; urgency=medium
 
