finalize changelog for nvidia-graphics-drivers (352.55-2)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/352@5759 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-nvidia-graphics-drivers (352.55-2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (352.55-2) experimental; urgency=medium
 
   * Merge changes from 340.93-6.
 
- -- Andreas Beckmann <anbe@debian.org>  Fri, 23 Oct 2015 02:40:52 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Fri, 23 Oct 2015 02:46:30 +0200
 
 nvidia-graphics-drivers (352.55-1) experimental; urgency=medium
 
