--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (340.93-7) UNRELEASED; urgency=medium
+
+  * Ship the NEWS in xserver-xorg-video-nvidia and nvidia-kernel-dkms, too.
+
+ -- Andreas Beckmann <anbe@debian.org>  Sun, 01 Nov 2015 23:33:19 +0100
+
 nvidia-graphics-drivers (340.93-6) unstable; urgency=medium
 
   * nvidia-opencl-icd: Restore the Depends: libcuda1.
