--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (340.93-7) UNRELEASED; urgency=medium
 
   * Ship the NEWS in xserver-xorg-video-nvidia and nvidia-kernel-dkms, too.
+  * Bump glx-alternative-nvidia dependency to (>= 0.7) for Xorg autoconfig.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 01 Nov 2015 23:33:19 +0100
 
