--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (340.93-8) UNRELEASED; urgency=medium
+
+  * nvidia-detect: Fix lspci call if there are multiple NVIDIA GPUs installed.
+    (Closes: #804073)
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 04 Nov 2015 19:23:00 +0100
+
 nvidia-graphics-drivers (340.93-7) unstable; urgency=medium
 
   * Ship the NEWS in xserver-xorg-video-nvidia and nvidia-kernel-dkms, too.
