--- a/debian/changelog
+++ b/debian/changelog
@@ -97,7 +97,7 @@ nvidia-graphics-drivers (358.09-1) UNRELEASED; urgency=medium
     - Add patch to build with Kbuild's version of the compiler instead of
       system default: use-kbuild-compiler.patch
     - Updated paths in debian/nvidia-kernel-dkms.dkms.in debian/rules.in,
-      debian/rules for new build system and new nvidia-modesetting module
+      debian/rules for new build system and new nvidia-modeset module
     - Removed debian/module/Makefile, debian/module/conftest.sh
     - Modules build on 4.2, update rules.def
     - debian/module/conftest/patches.h is no longer a symlink
