Close  804547 with the 355.11 release
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@5802 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 nvidia-graphics-drivers (355.11-1) UNRELEASED; urgency=medium
 
   [ Luca Boccassi ]
-  * New upstream release 355.11 (2015-08-31).
+  * New upstream release 355.11 (2015-08-31). (Closes: #804547)
     - Fixed a bug that could cause GPU exceptions when using glReadPixels()
       on the depth or stencil buffers of multisample windows while resizing
       or moving the windows.
