--- a/debian/changelog
+++ b/debian/changelog
@@ -44,7 +44,7 @@ nvidia-graphics-drivers (358.09-1) UNRELEASED; urgency=medium
       2.19+.  Memory allocated this way will consume space in /dev/shm.
       Setting the environment variable __GL_DevShmPageableAllocations
       to 2 will disable this feature
-  * New upstream release 355.11 (2015-08-31).
+  * New upstream release 355.11 (2015-08-31). (Closes: #804547)
     - Fixed a bug that could cause GPU exceptions when using glReadPixels()
       on the depth or stencil buffers of multisample windows while resizing
       or moving the windows.
