--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (340.93-8) UNRELEASED; urgency=medium
   * nvidia-detect: Fix lspci call if there are multiple NVIDIA GPUs installed
     and report driver support for each of them.  (Closes: #804073)
   * bug-control: Report status of bumblebee and bumblebee-nvidia.
+  * nvidia-alternative.postinst: Activate the register-glx-alternative-nvidia
+    trigger with --no-await.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 04 Nov 2015 19:23:00 +0100
 
