--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (340.93-9) UNRELEASED; urgency=medium
   * debian/module/debian/rules: Explicitly copy Module.symvers from the main
     kernel module for use by the uvm module, since the dependencies in Kbuild
     seem not to work in all cases.
+  * debian/control: Make dependencies on nvidia-alternative strictly versioned
+    to prevent partial upgrades.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 17 Nov 2015 05:28:25 +0100
 
