--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (340.93-9) UNRELEASED; urgency=medium
     seem not to work in all cases.
   * debian/control: Make dependencies on nvidia-alternative strictly versioned
     to prevent partial upgrades.
+  * Update lintian overrides.  (Closes: #805388)
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 17 Nov 2015 05:28:25 +0100
 
