--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+nvidia-graphics-drivers (304.131-1) UNRELEASED; urgency=medium
+
+  * New upstream legacy 304xx branch release 304.131 (2015-11-16).
+    - Fixed a bug that could cause texture corruption in some OpenGL
+      applications when video memory is exhausted by a combination of
+      simultaneously running graphical and compute workloads.
+    - Added support for X.Org xserver ABI 20 (xorg-server 1.18).
+
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 21 Nov 2015 00:54:17 +0100
+
 nvidia-graphics-drivers (304.128-1) wheezy; urgency=medium
 
   * New upstream legacy 304xx branch release 304.128 (2015-08-31).
