--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ nvidia-graphics-drivers (304.131-1) UNRELEASED; urgency=medium
       applications when video memory is exhausted by a combination of
       simultaneously running graphical and compute workloads.
     - Added support for X.Org xserver ABI 20 (xorg-server 1.18).
+  * Add xorg-video-abi-20 as alternative dependency.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 21 Nov 2015 00:54:17 +0100
 
