--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-nvidia-graphics-drivers (340.93-0+deb8u2) UNRELEASED; urgency=medium
+nvidia-graphics-drivers (340.96-1) UNRELEASED; urgency=medium
 
+  * New upstream legacy 340xx branch release 340.96 (2015-11-16).
   * d/rules: Move tar option --no-recursion before the list of files.
 
- -- Andreas Beckmann <anbe@debian.org>  Sat, 17 Oct 2015 18:38:13 +0200
+ -- Andreas Beckmann <anbe@debian.org>  Sat, 21 Nov 2015 02:50:49 +0100
 
 nvidia-graphics-drivers (340.93-0+deb8u1) jessie; urgency=medium
 
