--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ nvidia-graphics-drivers (340.96-1) UNRELEASED; urgency=medium
 
   * New upstream legacy 340xx branch release 340.96 (2015-11-16).
   * d/rules: Move tar option --no-recursion before the list of files.
+  * debian/control: Make dependencies on nvidia-alternative strictly versioned
+    to prevent partial upgrades.
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 21 Nov 2015 02:50:49 +0100
 
