--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ nvidia-graphics-drivers (304.131-1) UNRELEASED; urgency=medium
       of_parse_phandle, for_each_online_node, node_end_pfn (358.09).
     - Update conftest.sh function scatterlist for logic reversal in
       304.131/340.96/352.63, support both ways.
+  * debian/control: Add Breaks between mismatching upstream versions of
+    libcuda1 and nvidia-alternative to prevent partial upgrades. 
 
  -- Andreas Beckmann <anbe@debian.org>  Sat, 21 Nov 2015 00:54:17 +0100
 
