--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+nvidia-graphics-drivers (352.63-1) UNRELEASED; urgency=medium
+
+  * New upstream long lived branch release 352.63 (2015-11-16).
+    * Fixed CVE-2015-7869: Unsanitized User Mode Input.  (Closes: #805917)
+    - Added support for the following GPUs: GeForce 945M, Quadro M5000M,
+      Quadro M4000M, Quadro M3000M, Quadro M2000M, Quadro M1000M,
+      Quadro M600M, NVS 810, Tesla M40.
+    - Fixed a regression that prevented DPMS from working correctly on
+      some DisplayPort displays.
+    - Fixed a bug that could prevent X from starting when configured with
+      multiple X screens, some of which scan out to display devices, and
+      some of which do not.
+  * Merge changes from 340.96-2.
+
+ -- Andreas Beckmann <anbe@debian.org>  Tue, 24 Nov 2015 00:30:46 +0100
+
 nvidia-graphics-drivers (352.55-3) experimental; urgency=medium
 
   * Merge changes from 340.93-8.
